2005-10-19  Senganal T  <tsenganal@novell.com>

	* TdsConnectionParameter.cs :
		- Added a class variable 'AttachDBFileName' to store the location
		of the DB file.

	* Tds70.cs (Connect) :
		- Modified to append the bytes corresponding to AttachDBFileName 
		into the Tds Packets. 

2005-08-26  Sureshkumar T  <tsureshkumar@novell.com>

	* Tds70.cs (ExecProc): if no parameters, execute via RPC. parameter
	support has to be added.

	* Tds.cs (ExecRPC): added virtual method to execute via RPC.

	This fixes bug #68978 by enabling execution of sp_reset_connection.

2005-08-24  Sureshkumar T  <tsureshkumar@novell.com>

	* Tds.cs: ProcessColumnDetail (): expression columns don't have
	baseTableName.

2005-08-05  Sureshkumar T  <tsureshkumar@novell.com>

	* Tds70.cs: Reset (): remove exec.

2005-07-01  Sureshkumar T  <tsureshkumar@novell.com>

	* Tds70.cs: FormatParameter: For uniqueidentifier, pass the guid
	as '..' rather than hex. Tested with SqlServer 2005.

	patch from jsinger@eggmouse.com & Hubert FONGARNAND.

2005-06-29  Sureshkumar T  <tsureshkumar@novell.com>

	* TdsInternalException.cs: Add ctor for InnerException.

	* TdsComm.cs: Throw TdsInternalException rather than
	SocketException.

2005-06-01  Sureshkumar T  <tsureshkumar@novell.com>

	* Tds50.cs: add a special case for datetime parameters to convert
	to invariant culture. fixes bug #74910.

2005-04-07  Sureshkumar T  <tsureshkumar@novell.com>
	    Ankit Jain     <radical@corewars.org>

	* TdsComm.cs: GetPhysicalPacket is devided further into seperate
	methods GetPhysicalPacketHeader and
	GetPhysicalPacketData. Implemented asynchronous ReadPacket method.

	* ITds.cs: Added additional methods for asynchronous operations.

	* Tds.cs: Implemented base methods for asynchronous
	operations. Version specific derivatives should override for
	specific operations.

	* Tds70.cs: For stored procedure, "exec" is prefixed by
	default. Implemented asynchronous method for asynchronous command
	execution.
