@@ -1,3 +1,7 @@
+2005-10-27  Senganal T  <tsenganal@novell.com>
+
+	* SqlCommandTest.cs : Added Testcase for bug #75698
+
 2005-10-17  Senganal T  <tsenganal@novell.com>
 
 	* SqlDataAdapterTest.cs : Added Testcase for bug #76433.
